# mforth

./: .gitattributes  .gitignore  404.html  CLAUDE.md  LICENSE  README.docs-pointer.md  README.md  index.html  issues.jsonl  manifest  mkdocs.yml  pyproject.toml  requirements-docs.txt
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: project-constitution.md  workflow.json
.github/workflows/: ci.yml  docs.yml
docs/: index.md
docs/explanation/: forth-mental-model.md  index.md  mental-model.md  meta-layer.md  why-mforth.md
docs/how-to/: index.md  install.md  pin-sidecar-link-by-index.md  use-the-web-visualizer.md  use-with-helix.md  use-with-nvim.md  verify-repl-mlog-equivalence.md
docs/reference/: cli.md  dictionary.md  events.md  index.md  mlog-lowering.md  optimization-levels.md  sidecar-schema.md
docs/tutorials/: getting-started.md  index.md  writing-mforth-for-mindustry.md
docs/tutorials/learn-forth/: 01-stack.md  02-juggling.md  03-defining.md  04-arithmetic.md  05-branching.md  06-looping.md  07-state.md  08-output.md  09-factoring.md  10-defining-words.md  10-simulator.md  11-macros.md  11-sensing.md  12-controlling.md  12-simulator.md  13-control-loop.md  13-sensing.md  14-capstone.md  14-controlling.md  15-control-loop.md  15-where-next.md  16-capstone.md  17-where-next.md  index.md
editor/helix/: languages.toml
examples/: blink.fs  blink.world.toml  counter.fs  counter.world.toml
examples/tutorial/: part1.fs  part2.fs  part3.fs  part3.world.toml  part4.fs  part4.world.toml  part5.fs  part5.world.toml
explanation/: index.html
explanation/forth-mental-model/: index.html
explanation/meta-layer/: index.html
explanation/why-mforth/: index.html
how-to/: index.html
how-to/install/: index.html
how-to/pin-sidecar-link-by-index/: index.html
how-to/use-the-web-visualizer/: index.html
how-to/use-with-helix/: index.html
how-to/use-with-nvim/: index.html
how-to/verify-repl-mlog-equivalence/: index.html
reference/: index.html
reference/cli/: index.html
reference/dictionary/: index.html
reference/events/: index.html
reference/mlog-lowering/: index.html
reference/optimization-levels/: index.html
reference/sidecar-schema/: index.html
scripts/: install-beads-filter.sh  normalize-beads-jsonl.py
search/: search_index.json
src/mforth/: __init__.py  __main__.py  cli.py  cli_check.py  cli_compile.py  cli_run.py  cse.py  dce.py  dictionary.py  expand.py  fold.py  lex.py  licm.py  mlog_interp.py  optimize.py  parse.py  stackcheck.py
src/mforth/backend/: __init__.py  host.py  primitives.py  repl.py  runner.py  sidecar.py  world.py
src/mforth/exercises/: __init__.py
src/mforth/lsp/: __init__.py  __main__.py  cli_subcommand.py  server.py
src/mforth/repl/: __init__.py  cli_subcommand.py  driver.py
src/mforth/viz/: __init__.py  launcher.py  server.py
src/mforth/viz/static/: app.css  (+2 more)
tests/: conftest.py
tests/bench/: test_optimization_levels.py
tests/bench/bench_programs/: arith_heavy.fs  arith_heavy.world.toml  loop_heavy.fs  loop_heavy.world.toml  sensor_heavy.fs  sensor_heavy.world.toml  worddef_heavy.fs  worddef_heavy.world.toml
tests/golden/: arithmetic_basic.expected.mlog  arithmetic_basic.fs  arithmetic_basic.world.toml  begin_until.expected.mlog  begin_until.fs  begin_until.world.toml  blink.expected.mlog  blink.fs  blink.world.toml  conftest.py  counter.expected.mlog  counter.fs  counter.world.toml  getlink_index_mode.expected.mlog  getlink_index_mode.fs  getlink_index_mode.world.toml  if_then.expected.mlog  if_then.fs  if_then.world.toml  test_golden.py  test_harness.py
tests/integration/: _gen.py  test_blink_counter.py  test_check_cli.py  test_compile_cli.py  test_equivalence.py  test_equivalence_property.py  test_learn_forth_tutorial.py  test_mindustry_lsp_surfaces.py  test_optimized_equivalence.py  test_repl_prompt.py  test_run_file.py  test_tutorial_equivalence.py  test_viz_smoke.py
tests/manual/viz/: README.md  fixture-event-log.html  fixture-stack-and-tick.html  fixture-three-blocks.html
tests/unit/: test_check.py  test_cli.py  test_control.py  test_counter_aware_passes.py  test_create_does.py  test_cse.py  test_dce.py  test_dictionary.py  test_dictionary_counts.py  test_emit_arith.py  test_emit_control.py  test_emit_mindustry.py  test_expand.py  test_finalize.py  test_fold.py  test_host_executor.py  test_learn_ch01_03.py  test_learn_ch04_06.py  test_learn_ch07_09.py  test_learn_ch10_11.py  test_learn_ch10_12.py  test_learn_ch12_14.py  test_learn_ch13_15.py  test_learn_ch15_17.py  test_lex.py  test_licm.py  test_lsp_completion.py  test_lsp_definition.py  test_lsp_diagnostics.py  test_lsp_hover.py  test_lsp_meta.py  test_lsp_semantic_tokens.py  test_lsp_sidecar_watcher.py  test_mindustry_identifiers.py  test_mindustry_primitives.py  test_mlog_interp_variable_events.py  test_null.py  test_optimize.py  test_parse.py  test_peephole.py  (+11 more)
tree-sitter-mforth/: README.md  grammar.js  package.json  tree-sitter.json
tree-sitter-mforth/queries/: highlights.scm
tree-sitter-mforth/test/corpus/: basics.txt  defining_words.txt
tutorials/: index.html
tutorials/getting-started/: index.html
tutorials/learn-forth/: index.html
tutorials/learn-forth/01-stack/: index.html
tutorials/learn-forth/02-juggling/: index.html
tutorials/learn-forth/03-defining/: index.html
tutorials/learn-forth/04-arithmetic/: index.html
tutorials/learn-forth/05-branching/: index.html
tutorials/learn-forth/06-looping/: index.html
tutorials/learn-forth/07-state/: index.html
tutorials/learn-forth/08-output/: index.html
tutorials/learn-forth/09-factoring/: index.html
tutorials/learn-forth/10-defining-words/: index.html
tutorials/learn-forth/11-macros/: index.html
tutorials/learn-forth/12-simulator/: index.html
tutorials/learn-forth/13-sensing/: index.html
tutorials/learn-forth/14-controlling/: index.html
tutorials/learn-forth/15-control-loop/: index.html
tutorials/learn-forth/16-capstone/: index.html
tutorials/learn-forth/17-where-next/: index.html
tutorials/writing-mforth-for-mindustry/: index.html
(+121 files in other folders)
