[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mforth"
version = "0.1.2"
description = "Pragmatic Forth dialect that compiles to Mindustry mlog"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Frank Berthold", email = "fkberthold@gmail.com" }]
keywords = ["forth", "mindustry", "mlog", "compiler", "repl", "lsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Games/Entertainment",
]
# Runtime deps kept intentionally minimal. Two additions landed alongside
# each other from the wave-3 parallel bead burst:
#   * `websockets` — bead mforth-10t.20 web viz HTTP+WS server (chosen
#     over FastAPI to avoid pulling starlette + pydantic + anyio; the
#     viz needs one push-only event stream + a small control channel,
#     which the well-maintained `websockets` library serves cleanly).
#   * `pygls` — bead mforth-10t.23 LSP server (`mforth lsp`). Pinned to
#     the 2.x series — pygls 2.0 introduced the lsprotocol-based API
#     the server uses (`pygls.lsp.server.LanguageServer`,
#     `@server.feature(...)`).
# See the respective module docstrings for the full library-choice
# rationale; this manifest is just the dependency list.
dependencies = [
    "websockets>=12",
    "pygls>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.urls]
Homepage = "https://github.com/fkberthold/mforth"
Repository = "https://github.com/fkberthold/mforth"
Issues = "https://github.com/fkberthold/mforth/issues"

[project.scripts]
# Console script: `mforth <subcommand>` after `pip install -e .`.
# Subcommands register themselves via `mforth.cli.register_subcommand`;
# see src/mforth/cli.py for the registry pattern future subcommand
# beads (.20 viz, .23 LSP, run, compile, repl) follow.
mforth = "mforth.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mforth"]

[tool.hatch.build.targets.sdist]
# Default hatchling sdist scope is "everything not in .gitignore", which sucks
# in the .beads/ database (including its 2 MB+ backup .darc snapshot) and
# .claude/ ephemera. Pin the sdist to source-of-truth files only: src/, tests/,
# examples/, the tree-sitter grammar, the editor configs, and the top-level
# README + LICENSE + pyproject.toml that PyPI needs for long_description /
# metadata extraction.
include = [
    "/src",
    "/tests",
    "/examples",
    "/tree-sitter-mforth",
    "/editor",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CLAUDE.md",
    "/AGENTS.md",
    "/pyproject.toml",
]

[tool.pytest.ini_options]
# tests/unit exists today; the other three are placeholders for future beads
# (mforth-10t.29 integration, mforth-10t.30 golden mlog, mforth-10t.32 e2e).
# Listed up front so adding them later is a no-op for pytest discovery.
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/golden",
    "tests/e2e",
]
pythonpath = ["src"]
# Coverage flags live on the dedicated `pytest --cov` invocation (used in CI
# and documented in CLAUDE.md), not in addopts. Rationale: a bare `pytest -q`
# stays fast for the inner-loop TDD cycle; coverage runs are explicit.
addopts = "-q"

[tool.coverage.run]
branch = true
# Scope is intentionally the compiler core only: lex + parse + dictionary +
# stackcheck. Backends (host, mlog) are covered by equivalence fixtures in
# later beads, not by this gate.
source = [
    "mforth.lex",
    "mforth.parse",
    "mforth.dictionary",
    "mforth.stackcheck",
]

[tool.coverage.report]
# Gate lives in config so a bare `pytest --cov` (or `coverage report`) fails
# below threshold without anyone having to remember the flag.
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
